minor fix to site on firefox

--- a/styles/c_styles.css
+++ b/styles/c_styles.css
@@ -223,6 +223,9 @@
 
     color: white !important;
 
+    border: 1px solid red;
+    min-height: 100px;
+
 }
 
 .education-info {
@@ -440,6 +443,7 @@
 
     .title {
         font-size: 1.75rem;
+        min-height: 75px;
     }
 }
 
